[package]
name = "crawler"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2018"

description = "web crawler written in rust"
readme = "README.md"
keywords = [ "crawler", "web", "cli" ]
categories = [ "cli", ]

homepage = "https://github.com/LU15W1R7H/crawler"
repository = "https://github.com/LU15W1R7H/crawler.git"

license = "MIT"

# for cargo flamegraph
[profile.release]
debug = true

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
tempfile = "3.1.0"

[build-dependencies]
#clap = "3.0.0-beta.1"

[dependencies]
lwirth-rs = { git = "https://github.com/LU15W1R7H/lwirth-rs" } # or `path = "../lwirth-rs"`

futures = "0.3.5"
tokio = { version = "0.2.20", features = ["full"] }

reqwest = "0.10.4"
html5ever = "0.25.1"
url = "2.1.1"

clap = "2.33.0"
log = "0.4.8"
fern = { version = "0.6.0", features = ["colored"] }

chrono = "0.4.11"
rand = "0.7.3"
bytes = "0.5.4"
atty = "0.2.14"
#ctrlc = "3.1.4"

console = "0.11.2"
indicatif = "0.14.0"

