[package]
name = "crawler"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2018"

description = "web crawler written in rust"
readme = "README.md"
keywords = [ "crawler", "web", "cli" ]
categories = [ "cli", ]

homepage = "https://github.com/LU15W1R7H/crawler"
repository = "https://github.com/LU15W1R7H/crawler.git"

license = "MIT"

# for cargo flamegraph
[profile.release]
debug = true

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
tempfile = "3.1.0"

[build-dependencies]
#clap = "3.0.0-beta.1"

[dependencies]
lwirth-rs = { git = "https://github.com/LU15W1R7H/lwirth-rs" } # or `path = "../lwirth-rs"`

futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
clap = "2.33.1"

reqwest = "0.10.6"
html5ever = "0.25.1"
url = "2.1.1"

chrono = "0.4.11"
rand = "0.7.3"
bytes = "0.5.4"

atty = "0.2.14"
#ctrlc = "3.1.4"
console = "0.11.3"
indicatif = "0.14.0"

thiserror = "1.0.19"
eyre = "0.4.2"
color-eyre = { version = "0.3.2", features = [ "capture-spantrace"] }
tracing = "0.1.14"
tracing-error = "0.1.2"
tracing-subscriber = { version = "0.2.5", features = [ "env-filter" ] }
tracing-futures = "0.2.4"