[package]
name = "crawler"
version = "0.1.0"
edition = "2021"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"

clap = { version = "4.3.0", features = [ "derive" ] }

reqwest = "0.11.18"
html5ever = "0.26.0"
url = "2.3.1"

thiserror = "1.0.40"
eyre = "0.6.8"
color-eyre = { version = "0.6.2", features = [ "capture-spantrace"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
tracing-futures = "0.2.5"
